# darchivebot

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: architecture.md  insight-synthesis.md  ontology-graph.md  viewpoint-layer.md
scripts/: install_launch_agent.sh  preflight_public.sh  setup.sh  uninstall_launch_agent.sh
src/darchivebot/: __init__.py  cli.py  codex_harness.py  config.py  doctor.py  graph.py  insights.py  json_utils.py  ocr.py  processor.py  readiness.py  search.py  semantic_graph.py  state.py  storage.py  telegram.py  web.py
tests/: conftest.py  test_cli.py  test_codex_harness.py  test_config.py  test_doctor.py  test_graph.py  test_processor.py  test_project_files.py  test_semantic_graph.py  test_storage.py  test_telegram.py  test_web.py
