[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "darchivebot"
version = "0.1.0"
description = "다카이브봇: Telegram capture archive with local SQLite and Codex-backed processing"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "darchivebot contributors" }]
dependencies = ["pyoxigraph==0.5.8"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
darchive = "darchivebot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
